--- a/mi-banco/src/main/res/layout/fragment_payment_account.xml
+++ b/mi-banco/src/main/res/layout/fragment_payment_account.xml
@@ -65,7 +65,9 @@
         <ListView
             android:id="@+id/lvAccount"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"/>
+            android:layout_height="match_parent"
+            android:divider="#cccccc"
+            android:dividerHeight="1dip"/>
 
     </LinearLayout>
 
