--- a/mi-banco/src/main/res/values/styles.xml
+++ b/mi-banco/src/main/res/values/styles.xml
@@ -2177,11 +2177,30 @@
         <item name="android:gravity">center_horizontal</item>
     </style>
 
+    <style name="BtnTransferDisable">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">50dp</item>
+        <item name="android:background">@drawable/btn_transfer_gray</item>
+        <item name="android:layout_margin">20dp</item>
+        <item name="android:layout_alignParentBottom">true</item>
+        <item name="android:orientation">horizontal</item>
+        <item name="android:gravity">center_horizontal</item>
+    </style>
+
     <style name="BtnTransferIcon">
         <item name="android:layout_width">30dp</item>
         <item name="android:layout_height">30dp</item>
         <item name="android:layout_marginEnd">5dp</item>
         <item name="android:src">@drawable/transfer_white</item>
+        <item name="android:layout_gravity">center_vertical</item>
+    </style>
+
+    <style name="BtnTransferIconDisable">
+        <item name="android:layout_width">30dp</item>
+        <item name="android:layout_height">30dp</item>
+        <item name="android:layout_marginEnd">5dp</item>
+        <item name="android:src">@drawable/transfer_white</item>
+        <item name="tint">#A5A5A5</item>
         <item name="android:layout_gravity">center_vertical</item>
     </style>
 
@@ -2191,6 +2210,16 @@
         <item name="android:layout_gravity">center_vertical</item>
         <item name="android:text">@string/send_transfer</item>
         <item name="android:textColor">@color/white</item>
+        <item name="android:textSize">20dp</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+
+    <style name="BtnTransferTextDisable">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_gravity">center_vertical</item>
+        <item name="android:text">@string/send_transfer</item>
+        <item name="android:textColor">#A5A5A5</item>
         <item name="android:textSize">20dp</item>
         <item name="android:textStyle">bold</item>
     </style>
