--- a/mi-banco/src/main/res/layout/fragment_payments.xml
+++ b/mi-banco/src/main/res/layout/fragment_payments.xml
@@ -6,15 +6,15 @@
     android:layout_height="match_parent" android:layout_width="match_parent">
 
     <ScrollView
+        android:id="@+id/scrollView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_alignParentStart="true"
-        android:layout_marginBottom="50dp">
+        android:layout_marginBottom="70dp">
 
         <RelativeLayout style="@style/PaymentsPage"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="20dp">
+            android:layout_height="wrap_content">
 
             <LinearLayout
                 android:id="@+id/accounts_box"
