--- a/mi-banco/src/main/res/layout-small/botton_sheet_amount_editor.xml
+++ b/mi-banco/src/main/res/layout-small/botton_sheet_amount_editor.xml
@@ -154,7 +154,9 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal">
+                android:orientation="horizontal"
+                android:layout_marginStart="40dp"
+                android:layout_marginEnd="40dp">
 
                 <LinearLayout
                     android:layout_width="match_parent"
