--- a/mi-banco/src/main/res/layout/botton_sheet_amount_editor.xml
+++ b/mi-banco/src/main/res/layout/botton_sheet_amount_editor.xml
@@ -4,7 +4,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content">
 
     <ImageView
         android:layout_width="wrap_content"
@@ -64,7 +64,7 @@
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:background="?android:attr/selectableItemBackground"
-        android:padding="8dp">
+        android:padding="0dp">
 
         <LinearLayout
             android:id="@+id/lyAmount"
@@ -89,7 +89,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:layout_margin="20dp">
+            android:layout_marginStart="40dp"
+            android:layout_marginEnd="40dp">
 
             <LinearLayout
                 android:layout_width="match_parent"
