--- a/mi-banco/src/main/res/values/styles.xml
+++ b/mi-banco/src/main/res/values/styles.xml
@@ -2235,8 +2235,21 @@
     </style>
 
     <style name="BtnAmountEditorGray">
-        <item name="android:layout_width">100dp</item>
-        <item name="android:layout_height">80dp</item>
+        <item name="android:layout_width">90dp</item>
+        <item name="android:layout_height">70dp</item>
+        <item name="android:layout_gravity">center</item>
+        <item name="android:gravity">center</item>
+        <item name="android:textSize">25dp</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:layout_weight">0.1</item>
+        <item name="android:background">@drawable/btn_amount_editor</item>
+        <item name="android:layout_margin">20dp</item>
+        <item name="android:textColor">#000</item>
+    </style>
+
+    <style name="BtnAmountEditorGrayL">
+        <item name="android:layout_width">90dp</item>
+        <item name="android:layout_height">90dp</item>
         <item name="android:layout_gravity">center</item>
         <item name="android:gravity">center</item>
         <item name="android:textSize">25dp</item>
