--- a/mi-banco/src/main/res/layout/list_item_settings_switch.xml
+++ b/mi-banco/src/main/res/layout/list_item_settings_switch.xml
@@ -7,20 +7,34 @@
     android:minHeight="20dp"
     android:orientation="vertical" >
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_margin="@dimen/padding_16dp"
+        >
+
+
+    <ImageView
+
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="10dp"
+        android:src="@drawable/notification_push_icon"></ImageView>
 
     <TextView
         android:id="@+id/title_text"
-        android:layout_width="match_parent"
+        android:layout_width="196dp"
         android:layout_height="wrap_content"
-        android:padding="10dp"
+        android:layout_margin="10dp"
         android:textColor="@color/black" />
 
     <androidx.appcompat.widget.SwitchCompat
         android:id="@+id/switchOption"
-        android:layout_width="wrap_content"
+        android:layout_width="53dp"
+        android:layout_margin="10dp"
         android:layout_height="wrap_content"
-        android:layout_centerVertical="true"
-        android:layout_alignParentEnd="true"
-        android:theme="@style/SwitchStyle"/>
+        android:theme="@style/SwitchStyle" />
 
+    </LinearLayout>
 </RelativeLayout>
