--- a/mi-banco/src/main/res/layout-v28/sidebar_open.xml
+++ b/mi-banco/src/main/res/layout-v28/sidebar_open.xml
@@ -16,9 +16,11 @@
             android:id="@+id/title_page_toolbar"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="12dp"
+            android:layout_marginLeft="12dp"
             android:gravity="start"
+            android:lineHeight="28dp"
             android:textColor="@color/white"
+            android:textFontWeight="400"
             android:textSize="22sp" />
 
         <LinearLayout
@@ -34,8 +36,8 @@
                 android:id="@+id/bell_toolbar"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="12dp"
-                android:layout_marginEnd="38dp"
+                android:layout_marginLeft="12dp"
+                android:layout_marginRight="38dp"
                 android:adjustViewBounds="true"
                 android:contentDescription="@string/image"
                 android:src="@drawable/bell_toolbar" />
@@ -47,7 +49,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="end"
-            android:layout_marginStart="85dp"
+            android:layout_marginLeft="85dp"
             android:gravity="end"
             android:src="@drawable/logo_min_popular" />
 </LinearLayout>
