--- a/mi-banco/src/main/res/layout/account_details_top_section.xml
+++ b/mi-banco/src/main/res/layout/account_details_top_section.xml
@@ -7,40 +7,70 @@
 
     <LinearLayout
         style="@style/AccountsItem"
-        android:background="@color/black" >
+        android:layout_height="200dp"
+        android:background="@color/title_bar_background" >
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="horizontal"
+            android:orientation="vertical"
             android:paddingBottom="10dp"
             android:paddingLeft="20dp"
             android:paddingRight="20dp"
             android:paddingTop="10dp" >
-
-            <ImageView
-                android:id="@+id/item_image"
-                style="@style/AccountsItemImage"
-                tools:ignore="ContentDescription" />
-
             <LinearLayout style="@style/AccountsItemInfoSection" >
 
                 <TextView
                     android:id="@+id/item_name"
-                    style="@style/AccountsItemTitle"
+                    style="@style/AccountsTitle"
                     android:textColor="@color/white" />
 
-                <LinearLayout style="@style/AccountsItemInfoBottomSection" >
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="horizontal"
+                >
+                <ImageView
+                    android:id="@+id/item_image"
+                    android:layout_width="150dp"
+                    android:layout_height="match_parent"
+                    style="@style/AccountsItemImage"
+                    tools:ignore="ContentDescription" />
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:gravity="end"
+                    android:layout_gravity="end"
+                    android:orientation="vertical"
+                    style="@style/AccountsItemInfoBottomSection" >
+                    <TextView
+                        android:id="@+id/item_comment"
+                        android:layout_width="match_parent"
+                        android:layout_marginLeft="10dp"
+                        android:layout_gravity="end"
+                        style="@style/AccountsItemNumber" />
 
                     <TextView
                         android:id="@+id/item_value"
+                        android:layout_width="match_parent"
+                        android:layout_gravity="end"
+                        android:layout_marginLeft="10dp"
                         style="@style/AccountsAccountHeaderBalance" />
 
                     <TextView
-                        android:id="@+id/item_comment"
+                        android:id="@+id/item_date_exp"
+                        android:layout_width="match_parent"
+                        android:layout_marginLeft="10dp"
+                        android:layout_gravity="end"
                         style="@style/AccountsItemNumber" />
+
+
                 </LinearLayout>
             </LinearLayout>
+
+
+
         </LinearLayout>
 
         <RelativeLayout
