--- a/mi-banco/src/main/res/layout/list_item_settings.xml
+++ b/mi-banco/src/main/res/layout/list_item_settings.xml
@@ -2,9 +2,9 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/rootView"
-    android:layout_width="match_parent"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:gravity="center_vertical"
+    android:gravity="center"
     android:minHeight="20dp"
     android:orientation="vertical" >
 
@@ -13,12 +13,13 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
-        android:layout_centerVertical="true"
+        android:layout_marginRight="0dp"
         android:background="@null"
         android:paddingLeft="10dp"
-        android:paddingRight="10dp"
+        android:layout_marginTop="10dp"
+        android:paddingRight="50dp"
         android:scaleType="centerInside"
-        android:src="@drawable/ic_next"
+        android:src="@drawable/back_icon"
         tools:ignore="ContentDescription" />
 
     <TextView
@@ -26,6 +27,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_toLeftOf="@+id/arrow"
+        android:textSize="18dp"
+        android:lineHeight="16dp"
         android:padding="10dp"
         android:textColor="@color/black" />
 
