--- a/mi-banco/src/main/res/layout/settings_list.xml
+++ b/mi-banco/src/main/res/layout/settings_list.xml
@@ -6,9 +6,17 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <ListView
-        android:id="@+id/list_settings"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:divider="@null" />
+        style="@style/LayoutListView_settings"
+        >
+        <ListView
+            android:id="@+id/list_settings"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            style="@style/ListView_settings"
+            android:divider="@null" />
+    </LinearLayout>
+
 </LinearLayout>
