--- a/mi-banco/src/main/res/layout/toolbar.xml
+++ b/mi-banco/src/main/res/layout/toolbar.xml
@@ -1,17 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.appcompat.widget.Toolbar
     android:id="@+id/toolbar"
-    contentInsetEnd="0dp"
-    contentInsetLeft="0dp"
-    contentInsetRight="0dp"
-    contentInsetStart="0dp"
-    popupTheme="@style/ThemeOverlay.AppCompat.Light"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="?attr/actionBarSize"
     android:layout_margin="0dp"
     android:background="@color/title_bar_background"
+    app:titleTextColor="@color/white"
+    app:subtitleTextAppearance="@color/white"
+    app:subtitleTextColor="@color/white"
     android:minHeight="?attr/actionBarSize"
     android:padding="0dp"
-    app:theme="@style/ThemeOverlay.AppCompat.ActionBar" />
+    app:theme="@style/AppTheme" />
