--- a/mi-banco/src/main/res/menu-v11/menu.xml
+++ b/mi-banco/src/main/res/menu-v11/menu.xml
@@ -58,11 +58,11 @@
         android:visible="false" />
     <item
         android:id="@+id/menu_logout"
-        android:icon="@drawable/ic_logout"
+        android:titleCondensed="@string/logout"
         android:orderInCategory="99"
+        app:showAsAction="ifRoom"
         android:title="@string/logout"
-        android:visible="true"
-        app:showAsAction="ifRoom" />
+        android:visible="true" />
     <item
         android:id="@+id/menu_close"
         android:icon="@drawable/ic_close"
