--- a/mi-banco/src/main/res/values/colors.xml
+++ b/mi-banco/src/main/res/values/colors.xml
@@ -32,7 +32,7 @@
     <color name="btn_green_athm">#90c241</color>
 
     <!-- TITLE BAR -->
-    <color name="title_bar_background">#003e7e</color>
+    <color name="title_bar_background">#1C3665</color>
     <color name="title_bar_underline">#003265</color>
     <color name="title_bar_action_button_pressed">#1684bb</color>
 
@@ -162,7 +162,7 @@
     <color name="cash_back_redemption_text">#003E7E</color>
     <color name="cash_back_redemption_type_text">#0e2452</color>
     <color name="cash_back_redemption_selected">#eff3f7</color>
-t
+    t
     <!-- Notification Center -->
     <color name="nc_background_color">#3368B3</color>
 
