--- a/mi-banco/src/main/res/values/styles.xml
+++ b/mi-banco/src/main/res/values/styles.xml
@@ -2217,14 +2217,13 @@
     <style name="LayoutListView_settings">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
-        <item name="android:background">#F0F0F0</item>
+        <item name="android:background">#FFFFFF</item>
 
     </style>
     <style name="ListView_settings">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
-        <item name="android:background">@drawable/layout_list_view_settings</item>
-        <item name="android:layout_margin">20dp</item>
+        <item name="android:background">#FFFFFF</item>
     </style>
 
     <style name="BtnAmountEditorBlue">
