--- a/mi-banco/src/main/res/layout/list_item_holo_header.xml
+++ b/mi-banco/src/main/res/layout/list_item_holo_header.xml
@@ -7,17 +7,27 @@
     android:minHeight="20dp"
     android:orientation="vertical" >
 
+        <LinearLayout
+            android:id="@+id/lineDivider"
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="#CAC4D0"
+            android:visibility="visible"
+            android:layout_marginStart="10dp"
+            android:layout_marginEnd="10dp"
+            android:layout_marginTop="10dp"
+            android:orientation="horizontal" />
+
         <TextView
             android:id="@+id/title_text"
             style="@style/Text.Bigger"
             android:layout_width="match_parent"
             android:padding="10dp"
-            android:textColor="@color/holo_blue_light" />
+            android:layout_marginTop="10dp"
+            android:textColor="#49454F"
+            />
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:background="@color/holo_blue_light" />
+
 
 
 </LinearLayout>
