--- a/mi-banco/src/main/res/layout/list_item_settings.xml
+++ b/mi-banco/src/main/res/layout/list_item_settings.xml
@@ -8,35 +8,50 @@
     android:minHeight="20dp"
     android:orientation="vertical" >
 
-    <ImageView
-        android:id="@+id/arrow"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
-        android:layout_marginRight="0dp"
-        android:background="@null"
-        android:paddingLeft="10dp"
-        android:layout_marginTop="10dp"
-        android:paddingRight="50dp"
-        android:scaleType="centerInside"
-        android:src="@drawable/back_icon"
-        tools:ignore="ContentDescription" />
-
-    <TextView
-        android:id="@+id/title_text"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_toLeftOf="@+id/arrow"
-        android:textSize="18dp"
-        android:lineHeight="16dp"
-        android:padding="10dp"
-        android:textColor="@color/black" />
+        android:layout_height="40dp"
+        android:orientation="horizontal"
+        android:gravity="center">
+
+        <ImageView
+            android:id="@+id/iconImg"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_margin="10dp"
+            android:src="@drawable/back_icon"
+            android:layout_weight="1"
+            android:visibility="gone"
+            />
+
+        <TextView
+            android:id="@+id/title_text"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textSize="16dp"
+            android:lineHeight="16dp"
+            android:padding="10dp"
+            android:textColor="@color/black"
+            android:layout_weight="6"
+            />
+
+        <ImageView
+            android:id="@+id/arrow"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:layout_margin="10dp"
+            android:src="@drawable/back_icon"
+            android:layout_weight="1"
+            />
+
+    </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="1px"
         android:layout_alignParentBottom="true"
         android:background="@color/grey_light"
-        tools:ignore="PxUsage" />
+        tools:ignore="PxUsage"
+        android:visibility="gone"/>
 
 </RelativeLayout>
