--- a/mi-banco/src/main/res/layout/list_item_settings_push.xml
+++ b/mi-banco/src/main/res/layout/list_item_settings_push.xml
@@ -1,57 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/rootView"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:gravity="center_vertical"
     android:minHeight="20dp"
-    android:orientation="vertical"
-    >
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:paddingTop="10dp"
-            android:layout_margin="@dimen/padding_16dp"
-            >
-
-
-            <ImageView
-
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_margin="10dp"
-                android:src="@drawable/notification_push_icon"></ImageView>
-
-            <TextView
-                android:id="@+id/title_text"
-                android:layout_width="196dp"
-                android:layout_height="wrap_content"
-                android:layout_margin="10dp"
-                android:textColor="@color/black"
-                tools:text="Push Notifications" />
-
-            <androidx.appcompat.widget.SwitchCompat
-                android:id="@+id/push_switch"
-                android:layout_width="53dp"
-                android:layout_margin="10dp"
-                android:layout_height="wrap_content"
-                android:theme="@style/SwitchStyle" />
-
-
-        </LinearLayout>
+    android:orientation="vertical">
 
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/warningView"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center_vertical"
         android:minHeight="10dp"
         android:orientation="vertical"
-        android:paddingLeft="20dp"
-        android:paddingRight="20dp"
         android:visibility="gone">
 
         <TextView
@@ -82,12 +45,45 @@
 
     </LinearLayout>
 
-    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:orientation="horizontal"
+        android:gravity="center"
+        android:visibility="visible"
+        >
+
+        <ImageView
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_margin="10dp"
+            android:src="@drawable/notification_push_icon"
+            android:layout_weight="1"/>
+
+        <TextView
+            android:id="@+id/title_text"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            android:textColor="@color/black"
+            tools:text="Push Notifications"
+            android:layout_weight="6"/>
+
+        <androidx.appcompat.widget.SwitchCompat
+            android:id="@+id/push_switch"
+            android:layout_width="60dp"
+            android:layout_height="wrap_content"
+            android:theme="@style/SwitchStyle"
+            android:layout_weight="1"/>
+
+
+    </LinearLayout>
+
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
         android:id="@+id/alertsView"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/warningView"
+        android:layout_height="40dp"
         android:animateLayoutChanges="true"
         android:background="?android:selectableItemBackground"
         android:clickable="true"
@@ -95,35 +91,24 @@
         android:gravity="center_vertical"
         android:minHeight="20dp"
         android:orientation="vertical"
-        android:visibility="visible">
+        android:visibility="gone">
+
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="1px"
-            android:layout_alignParentTop="true"
-            android:background="@color/grey_light"
-            android:clickable="true"
-            android:focusable="true"
-            android:visibility="visible"
-            tools:ignore="PxUsage" />
-
-        <ImageView
-            android:id="@+id/arrow"
-            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
-            android:layout_centerVertical="true"
-            android:background="@null"
-            android:paddingLeft="10dp"
-            android:paddingRight="10dp"
-            android:scaleType="centerInside"
-            android:src="@drawable/back_icon"
-            tools:ignore="ContentDescription" />
+            android:orientation="horizontal"
+            android:gravity="center">
 
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:paddingBottom="20dp">
+            <ImageView
+                android:id="@+id/iconImg"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_margin="10dp"
+                android:src="@drawable/img_alert_blue"
+                android:layout_weight="1"
+                android:visibility="visible"
+                />
 
             <TextView
                 android:id="@+id/title_text_alerts"
@@ -131,11 +116,24 @@
                 android:layout_height="wrap_content"
                 android:layout_toLeftOf="@+id/arrow"
                 android:paddingLeft="16dp"
-                android:paddingTop="10dp"
-                android:paddingBottom="20dp"
-                android:textColor="@color/black" />
+                android:textColor="@color/black"
+                android:layout_weight="6"/>
+
+            <ImageView
+                android:id="@+id/arrow"
+                android:layout_width="20dp"
+                android:layout_height="20dp"
+                android:layout_margin="10dp"
+                android:src="@drawable/back_icon"
+                android:layout_weight="1"
+                />
+
+
         </LinearLayout>
 
-    </RelativeLayout>
-</RelativeLayout>
+
+
+    </LinearLayout>
+
+</LinearLayout>
 
