--- a/mi-banco/src/main/res/layout/settings_list.xml
+++ b/mi-banco/src/main/res/layout/settings_list.xml
@@ -4,7 +4,8 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:background="#FFFFFF">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -16,7 +17,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             style="@style/ListView_settings"
-            android:divider="@null" />
+            android:divider="@color/white"
+            android:layout_margin="10dp"/>
     </LinearLayout>
 
 </LinearLayout>
